--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@bsv/sdk": "^1.0.10",
-    "bsv-p2p": "^2.0.1"
+    "bsv-p2p": "^2.0.1",
+    "express": "^4.18.3"
   }
 }
